Add product details and action buttons to index.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 </head>
 <body>
     <div class="container">
-        
+        <img src="" alt="">
+        <p>$150</p>
+        <h1>Title</h1>
+        <h2>Sub-title</h2>
+        <button type="submit">Buy Now</button>
+        <button type="submit">Add to cart</button>
     </div>
 </body>
 </html>
