Add CSS styles and update HTML structure for improved layout and design

--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Card Item</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <img src="" alt="">
+        <img src="images/pexels-jatin-anand-33853-125779.jpg" alt="Watch">
         <p>$150</p>
         <h1>Title</h1>
         <h2>Sub-title</h2>
-        <button type="submit">Buy Now</button>
-        <button type="submit">Add to cart</button>
+        <div class="btn">
+            <button type="submit">Buy Now</button>
+            <button type="submit">Add to Cart</button>
+        </div>
     </div>
 </body>
 </html>
